added delete verb for register endpoint
