# handlers/xx_router.go
@@ -10,7 +10,8 @@ func GetRouter() *pat.Router {
 	r := pat.New()
 
 	r.Get("/v1/health", HealthHandler)
-	r.Post("/v1/register", RegisterHandler)
+	r.Post("/v1/register", RegisterCreateHandler)
+	r.Delete("/v1/register", RegisterDeleteHandler)
 
 	//Add routing for static routes
 	s := http.StripPrefix("/swagger/", http.FileServer(http.Dir("/swagger")))
